KAYAKORW-7366-KAYAKORW-8198: improvements, EKS migration plan. (#61)
https://jira.devfactory.com/browse/KAYAKORW-7366
https://jira.devfactory.com/browse/KAYAKORW-8198
* hided host memory and CPU inside docker for jvm < 9;
* applied ANSIBLE_VAULT_PASSWORD feature;
* fixed reported issues;
* provided dockerignore file to speedup docker build;
EKS migration plan is: https://docs.google.com/spreadsheets/d/1dS-jJDmr-5WZw6xCIBepkGudly9AH_64RBYna2IoIOU/edit?usp=sharing